[gd_scene load_steps=2 format=3 uid="uid://hud001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="FloorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
text = "深淵 第 1 層"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 45.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 55.0
offset_right = 150.0
offset_bottom = 80.0
text = "DPS: 0"

[node name="KillsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 85.0
offset_right = 150.0
offset_bottom = 110.0
text = "擊殺: 0"

[node name="EnemyCountLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 45.0
grow_horizontal = 0
text = "敵人: 0"
horizontal_alignment = 2

[node name="InventoryLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 115.0
offset_right = 150.0
offset_bottom = 140.0
text = "背包: 0/60"

[node name="StatusIcons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 145.0
offset_right = 240.0
offset_bottom = 170.0

[node name="KeyHintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "[I] 裝備  [K] 技能  [C] 打造  [Z] 撿取全部  [ESC] 暫停"
horizontal_alignment = 1
